[tool.poetry]
name = "yt_live_chat_commands"
version = "0.1.0"
description = ""
authors = ["codinEirc <risheric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
python-decouple = "^3.4"
simpleaudio = "^1.0.4"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
